--- a/Public/Home/fe/static/css/flaticon.css
+++ b/Public/Home/fe/static/css/flaticon.css
@@ -5,12 +5,12 @@
 
 @font-face {
   font-family: "Flaticon";
-  src: url("../fonts/flaticon.eot");
-  src: url("../fonts/flaticon.eot") format("embedded-opentype"),
-       url("../fonts/flaticon.woff2") format("woff2"),
-       url("../fonts/flaticon.woff") format("woff"),
-       url("../fonts/flaticon.ttf") format("truetype"),
-       url("../fonts/flaticon.svg#flaticon") format("svg");
+  src: url("__CDN3__/Public/Home/fe/static/fonts/flaticon.eot");
+  src: url("__CDN3__/Public/Home/fe/static/fonts/flaticon.eot") format("embedded-opentype"),
+       url("__CDN3__/Public/Home/fe/static/fonts/flaticon.woff2") format("woff2"),
+       url("__CDN3__/Public/Home/fe/static/fonts/flaticon.woff") format("woff"),
+       url("__CDN3__/Public/Home/fe/static/fonts/flaticon.ttf") format("truetype"),
+       url("__CDN3__/Public/Home/fe/static/fonts/flaticon.svg#flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -23,7 +23,7 @@
 }
 
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
-[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
+[class^="flaticon-"]:after, [class*=" flaticon-"]:after {
   font-family: Flaticon;
 font-style: normal;
 }
