--- a/Public/Home/fe/static/css/flaticon.css
+++ b/Public/Home/fe/static/css/flaticon.css
@@ -5,12 +5,12 @@
 
 @font-face {
   font-family: "Flaticon";
-  src: url("https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/fonts/flaticon.eot");
-  src: url("https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/fonts/flaticon.eot") format("embedded-opentype"),
-       url("https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/fonts/flaticon.woff2") format("woff2"),
-       url("https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/fonts/flaticon.woff") format("woff"),
-       url("https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/fonts/flaticon.ttf") format("truetype"),
-       url("https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/fonts/flaticon.svg#flaticon") format("svg");
+  src: url("https://d27u2p8o1zgaev.cloudfront.net/Public/Home/fe/static/fonts/flaticon.eot");
+  src: url("https://d27u2p8o1zgaev.cloudfront.net/Public/Home/fe/static/fonts/flaticon.eot") format("embedded-opentype"),
+       url("https://d27u2p8o1zgaev.cloudfront.net/Public/Home/fe/static/fonts/flaticon.woff2") format("woff2"),
+       url("https://d27u2p8o1zgaev.cloudfront.net/Public/Home/fe/static/fonts/flaticon.woff") format("woff"),
+       url("https://d27u2p8o1zgaev.cloudfront.net/Public/Home/fe/static/fonts/flaticon.ttf") format("truetype"),
+       url("https://d27u2p8o1zgaev.cloudfront.net/Public/Home/fe/static/fonts/flaticon.svg#flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
